# engineering.toolbox

./: .env.example  .gitignore  .sizepolicy.json  AUDIT_REPORT.md  BROWSER_DEV_TOOLS_SETUP_ENHANCEMENT.md  BUSHING_TOOLBOX_AUDIT_GATED_PLAN_V1.md  BushingRightLaneCards.svelte  BushingSortableLane.svelte  C17_ADDITION_SUMMARY.md  CI_AND_TAURI_FIXES_SUMMARY.md  CI_FIX_COMPLETION_REPORT.md  CI_FIX_IMPLEMENTATION_COMPLETE.md  CI_FIX_VISUAL_SUMMARY.txt  CODEBASE_REVIEW_REPORT.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_MISSION_SUMMARY.md  Cargo.toml  DEEP_QUALITY_ANALYSIS_REPORT.md  FEATURE_RECOMMENDATIONS.md  FILE_SIZE_POLICY_GATED_PLAN_V1.md  FILE_SIZE_POLICY_MIGRATION.md  FILE_SIZE_POLICY_STATUS.md  FILE_SIZE_POLICY_V2.md  IMPLEMENTATION_SUMMARY.md  INSPECTOR_AUTOMATED_TEST_RESULTS.md  INSPECTOR_COMPREHENSIVE_TEST_REPORT.md  INSPECTOR_FILTER_EXECUTIVE_SUMMARY.md  INSPECTOR_FIX_SUMMARY.md  INSPECTOR_INFINITE_LOOP_FIX_FINAL.md  INSPECTOR_MENU_TEST_MANIFEST.md  INSPECTOR_MISSION_COMPLETE.md  INSPECTOR_OPTIMIZATION_PLAN.md  INSPECTOR_OPTIMIZATION_SUMMARY.md  INSPECTOR_QUERY_FILTERING_FIX.md  INSPECTOR_REVIEW_EXECUTIVE_SUMMARY.md  INSPECTOR_UX_REMEDIATION_GATED_PLAN_V1.md  INSPECTOR_VALIDATION_REPORT.md  MANUAL_TESTING_CHECKLIST.md  MISSION_COMPLETE.md  MISSION_QUICK_REFERENCE.md  (+55 more)
cli/bushing-cli/: Cargo.toml
cli/bushing-cli/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bushing.rs  fastener.rs  inspector.rs  main.rs  surface.rs
src-tauri/src/geometry/: brep.rs  (+3 more)
(+933 files in other folders)
