[package]
name = "structural-companion-desktop"
version = "0.1.0"
description = "Structural Companion Desktop"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nalgebra = "0.32"
csv = "1.3"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }
sha1 = "0.10"
tauri-plugin-dialog = "2"

[features]
default = ["tauri/default"]
